oxiplate-derive/tests/broken/operators/unreachable-prefix-operator.stderr
error: Unexpected character in expression
 --> tests/broken/operators/unreachable-prefix-operator.rs:5:23
  |
5 | #[oxiplate_inline("{{ @a }}")]
  |                       ^
